Configuración de dependencias Jakarta Plataform